--- a/slider.html
+++ b/slider.html
@@ -4,11 +4,11 @@
     <title>alex shortt</title>
 
     <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/slider/slider.css">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
     <script src="scripts/hashchange.min.js" type="text/javascript"></script>
-    <script src="scripts/main.js" type="text/javascript"></script>
+    <script src="scripts/slider.js" type="text/javascript"></script>
 </head>
 
 <body>
