big additions on rectangle

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
 <body>
     <a href="slider.html">Slider</a>
+    <a href="rectangle.html">Rectangle</a>
+    <a href="threeD.html">threeD</a>
 </body>
 
 </html>
