--- a/rectangle.html
+++ b/rectangle.html
@@ -6,24 +6,43 @@
     <link rel="stylesheet" type="text/css" href="css/rectangle/rectangle.css">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
-    <script src="scripts/jquery.svg.js" type="text/javascript"></script>
+    <script src="scripts/hashchange.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.15.0/TweenMax.min.js" type="text/javascript"></script>
     <script src="scripts/rectangle.js" type="text/javascript"></script>
 
 
 </head>
 
 <body>
-    <div class="rect-box"></div>
-    <object id="rect-hand" type="image/svg+xml" data="assets/hand.svg" class="rect-hand">
-        
-    </object>
+    <div id="parallax-wrapper" class="rect-box">
+        <div id="rect-border" class="rect-border"></div>
+        <div id="hand-despair" class="fade-in parallax hand hand-despair" data-speed="3">
+            <img class="hand-image-despair" src="./assets/hand-despair.png">
+        </div>
+        <div id="hand-help" class="parallax hand hand-help" data-revert="true" data-speed="0.9">
+            <img class="hand-image-help" src="./assets/hand-help.png">
+        </div>
+        <div id="menu-main" class="rect-menu menu-main">
+            <h1 id="menu-main-title" class="menu-main-title">Alex Shortt</h1>
+        </div>
+        <div id="menu-nav" class="rect-menu menu-nav">
+            <h1 class="menu-nav-option">Projects</h1>
+            <h1 class="menu-nav-option">About</h1>
+            <h1 class="menu-nav-option">Contact</h1>
+        </div>
+        <div id="menu-contact" class="rect-menu menu-contact">
+            <h1 class="menu-contact-option">Projects</h1>
+            <h1 class="menu-contact-option">About</h1>
+            <h1 class="menu-contact-option">Contact</h1>
+        </div>
+    </div>
 
-    <style id="svg-css">
-        .hand-path {
-            stroke-width: 5px;
-        }
+    <script>
+        $(document).ready(function() {
+            initPage();
+        });
 
-    </style>
+    </script>
 </body>
 
 </html>
@@ -31,5 +50,5 @@
 <!--
 Idea::
 
-Lucas V type design, draw svg path objects on
+Lucas V type design, plans are laid out in plans.ai
 -->
