changing up ideas to plans

--- a/rectangle.html
+++ b/rectangle.html
@@ -31,7 +31,7 @@
                 <h1 class="menu-nav-option">Projects</h1>
                 <h1 class="menu-nav-option">About</h1>
                 <h1 id="menu-nav-contact" class="menu-nav-option">Contact</h1>
-                <h1 id="menu-nav-back" class="menu-nav-option fa fa-2x fa-arrow-left"></h1>
+                <!--<h1 id="menu-nav-back" class="menu-nav-option fa fa-2x fa-arrow-left"></h1>-->
             </div>
             <div id="menu-contact" class="rect-menu menu-contact">
                 <div class="menu-contact-option">
