--- a/rectangle.html
+++ b/rectangle.html
@@ -13,6 +13,11 @@
 </head>
 
 <body>
+    <div class="splash_svg">
+        <svg width="100%" height="100%">
+            <rect width="100%" height="100%" />
+        </svg>
+    </div>
     <div id="parallax-wrapper" class="rect-box">
         <div id="rect-border" class="rect-border"></div>
         <div id="hand-despair" class="fade-in parallax hand hand-despair" data-speed="3.2">
@@ -32,7 +37,7 @@
                 <!--<h1 id="menu-nav-back" class="menu-nav-option fa fa-2x fa-arrow-left"></h1>-->
             </div>
             <div id="menu-about" class="rect-menu menu-about">
-                <h1 class="menu-about-option">Projects</h1>
+                <canvas id="wibbly-canvas"></canvas>
             </div>
             <div id="menu-contact" class="rect-menu menu-contact">
                 <div class="menu-contact-option">
@@ -59,12 +64,11 @@
     </div>
 
     <script>
-        $(document).ready(function() {
+        $(document).ready(function () {
             initPage();
             initHash();
             initParallax();
         });
-
     </script>
 </body>
 
