--- a/rectangle.html
+++ b/rectangle.html
@@ -13,7 +13,10 @@
 </head>
 
 <body>
-    <div class="splash_svg">
+    <div id="project-1" class="modal">
+       <h1 data-modal="project-1" class="modal-close fa fa-3x fa-times" aria-hidden="true"></h1>
+    </div>
+    <div id="splash-svg" class="splash-svg">
         <svg width="100%" height="100%">
             <rect width="100%" height="100%" />
         </svg>
@@ -37,7 +40,7 @@
                 <!--<h1 id="menu-nav-back" class="menu-nav-option fa fa-2x fa-arrow-left"></h1>-->
             </div>
             <div id="menu-about" class="rect-menu menu-about">
-                <canvas id="wibbly-canvas"></canvas>
+                <h1 id="about-project-1" class="menu-about-option">Project 1</h1>
             </div>
             <div id="menu-contact" class="rect-menu menu-contact">
                 <div class="menu-contact-option">
@@ -64,11 +67,12 @@
     </div>
 
     <script>
-        $(document).ready(function () {
+        $(document).ready(function() {
             initPage();
             initHash();
             initParallax();
         });
+
     </script>
 </body>
 
