fixed modal with cleaner code, added stars

--- a/rectangle.html
+++ b/rectangle.html
@@ -14,7 +14,7 @@
 
 <body>
     <div id="project-1" class="modal">
-       <h1 data-modal="project-1" class="modal-close fa fa-3x fa-times" aria-hidden="true"></h1>
+        <h1 data-modal="project-1" class="modal-close fa fa-3x fa-times" aria-hidden="true"></h1>
     </div>
     <div id="splash-svg" class="splash-svg">
         <svg width="100%" height="100%">
@@ -22,7 +22,6 @@
         </svg>
     </div>
     <div id="parallax-wrapper" class="rect-box">
-        <div id="rect-border" class="rect-border"></div>
         <div id="hand-despair" class="fade-in parallax hand hand-despair" data-speed="3.2">
             <img class="hand-image-despair" src="./assets/hand-despair.png">
         </div>
@@ -34,13 +33,17 @@
                 <h1 id="menu-main-title" class="menu-main-title">Alex Shortt</h1>
             </div>
             <div id="menu-nav" class="rect-menu menu-nav">
-                <h1 class="menu-nav-option">Projects</h1>
+                <h1 id="menu-nav-projects" class="menu-nav-option">Projects</h1>
                 <h1 id="menu-nav-about" class="menu-nav-option">About</h1>
                 <h1 id="menu-nav-contact" class="menu-nav-option">Contact</h1>
                 <!--<h1 id="menu-nav-back" class="menu-nav-option fa fa-2x fa-arrow-left"></h1>-->
             </div>
+            <div id="menu-projects" class="rect-menu menu-projects">
+                <h1 id="projects-project-1" class="menu-projects-option">Project 1</h1>
+            </div>
             <div id="menu-about" class="rect-menu menu-about">
-                <h1 id="about-project-1" class="menu-about-option">Project 1</h1>
+                <div class="stars"></div>
+                <h1 id="" class="menu-about-option">Me</h1>
             </div>
             <div id="menu-contact" class="rect-menu menu-contact">
                 <div class="menu-contact-option">
