--- a/rectangle.html
+++ b/rectangle.html
@@ -52,21 +52,19 @@
                     <h1 id="projects-project-2" class="menu-projects-option">Project 8</h1>
                     <h1 id="projects-project-2" class="menu-projects-option">Project 9</h1>
                     <h1 id="projects-project-2" class="menu-projects-option">Project 10</h1>
-                    <h1 id="projects-project-2" class="menu-projects-option">Project 11</h1>
-                    <h1 id="projects-project-2" class="menu-projects-option">Project 12</h1>
-                    <h1 id="projects-project-2" class="menu-projects-option">Project 13</h1>
-                    <h1 id="projects-project-2" class="menu-projects-option">Project 14</h1>
-                    <h1 id="projects-project-2" class="menu-projects-option">Project 15</h1>
-                    <h1 id="projects-project-2" class="menu-projects-option">Project 16</h1>
-                    <h1 id="projects-project-2" class="menu-projects-option">Project 17</h1>
-                    <h1 id="projects-project-2" class="menu-projects-option">Project 18</h1>
-                    <h1 id="projects-project-2" class="menu-projects-option">Project 19</h1>
-                    <h1 id="projects-project-2" class="menu-projects-option">Project 20</h1>
                 </div>
             </div>
             <div id="menu-about" class="rect-menu menu-about">
                 <div class="stars"></div>
-                <h1 id="" class="menu-about-option">Me</h1>
+                <div id="about-carousel" class="menu-about-carousel">
+                    <div id="about-page-1" class="menu-about-carousel-page">Hi</div>
+                    <div id="about-page-2" class="menu-about-carousel-page">asdf</div>
+                    <div id="about-page-2" class="menu-about-carousel-page">asdf</div>
+                </div>
+                <div class="menu-about-arrow">
+                    <i id="about-page-up" class="menu-about-arrow-button fa fa-arrow-circle-up" aria-hidden="true"></i>
+                    <i id="about-page-down" class="menu-about-arrow-button fa fa-arrow-circle-down" aria-hidden="true"></i>
+                </div>
             </div>
             <div id="menu-contact" class="rect-menu menu-contact">
                 <div class="menu-contact-option">
