added assets for the projects

--- a/rectangle.html
+++ b/rectangle.html
@@ -42,16 +42,21 @@
             </div>
             <div id="menu-projects" class="rect-menu menu-projects">
                 <div class="menu-projects-wrapper">
-                    <h1 id="projects-project-1" class="menu-projects-option">Project 1</h1>
-                    <h1 id="projects-project-2" class="menu-projects-option">Project 2</h1>
-                    <h1 id="projects-project-2" class="menu-projects-option">Project 3</h1>
-                    <h1 id="projects-project-2" class="menu-projects-option">Project 4</h1>
-                    <h1 id="projects-project-2" class="menu-projects-option">Project 5</h1>
-                    <h1 id="projects-project-2" class="menu-projects-option">Project 6</h1>
-                    <h1 id="projects-project-2" class="menu-projects-option">Project 7</h1>
-                    <h1 id="projects-project-2" class="menu-projects-option">Project 8</h1>
-                    <h1 id="projects-project-2" class="menu-projects-option">Project 9</h1>
-                    <h1 id="projects-project-2" class="menu-projects-option">Project 10</h1>
+                    <div id="projects-awge" class="menu-projects-option">
+                        <h1 class="menu-projects-option-text">AWGE</h1>
+                    </div>
+                    <div id="projects-revenge" class="menu-projects-option">
+                        <h1 class="menu-projects-option-text">Revenge x Storm</h1>
+                    </div>
+                    <div id="projects-sounddown" class="menu-projects-option">
+                        <h1 class="menu-projects-option-text">SoundDown</h1>
+                    </div>
+                    <div id="projects-nessly" class="menu-projects-option">
+                        <h1 class="menu-projects-option-text">Nessly</h1>
+                    </div>
+                    <div id="projects-portal" class="menu-projects-option">
+                        <h1 class="menu-projects-option-text">Portal Gun <br> Mod</h1>
+                    </div>
                 </div>
             </div>
             <div id="menu-about" class="rect-menu menu-about">
