finished add/show physics effects

--- a/rectangle.html
+++ b/rectangle.html
@@ -93,6 +93,7 @@
             </div>
         </div>
         <div id="rect-background" class="rect-background"></div>
+        <h1 id="text" style="color: white; position: absolute;">HELLO</h1>
     </div>
 
     <script>
