--- a/rectangle.html
+++ b/rectangle.html
@@ -11,20 +11,27 @@
     <script src="scripts/hashchange.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.15.0/TweenMax.min.js" type="text/javascript"></script>
     <script src="scripts/perfect-scrollbar.jquery.min.js" type="text/javascript"></script>
-    <script src="scripts/physicsjs-full.min.js"></script>
-    
+
     <script src="scripts/rectangle.js" type="text/javascript"></script>
 </head>
 
 <body>
     <div id="project-1" class="modal">
+        <svg class="modal-svg">
+            <line class="modal-svg-line" x1="0" y1="80%" x2="100%" y2="80%"></line>
+        </svg>
         <h1 data-modal="project-1" class="modal-close fa fa-3x fa-times" aria-hidden="true"></h1>
+        <img src="./assets/girl.png" class="modal-girl-image">
+        <div class="modal-content">
+        </div>
     </div>
+
     <div id="splash-svg" class="splash-svg">
         <svg width="100%" height="100%">
             <rect width="100%" height="100%" />
         </svg>
     </div>
+
     <div id="parallax-wrapper" class="rect-box">
         <div id="hand-despair" class="fade-in parallax hand hand-despair" data-speed="3.2">
             <img class="hand-image-despair" src="./assets/hand-despair.png">
@@ -68,7 +75,7 @@
                     <i id="about-page-down" class="menu-about-arrow-button fa fa-arrow-circle-down" aria-hidden="true"></i>
                 </div>
                 <div id="about-physics" class="menu-about-physics">
-            
+
                 </div>
             </div>
             <div id="menu-contact" class="rect-menu menu-contact">
@@ -93,15 +100,16 @@
             </div>
         </div>
         <div id="rect-background" class="rect-background"></div>
-        <h1 id="text" style="color: white; position: absolute;">HELLO</h1>
     </div>
 
     <script>
-        $(document).ready(function () {
+        $(document).ready(function() {
             initPage();
             initHash();
             initParallax();
+            rect.openModal('project-1');
         });
+
     </script>
 </body>
 
