lots of work, nice stars/shooting stars

--- a/rectangle.html
+++ b/rectangle.html
@@ -12,7 +12,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.15.0/TweenMax.min.js" type="text/javascript"></script>
     <script src="scripts/perfect-scrollbar.jquery.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/svg.js/2.6.3/svg.min.js"></script>
-    
+
     <script src="scripts/rectangle.js" type="text/javascript"></script>
 </head>
 
@@ -24,12 +24,18 @@
         <h1 data-modal="project-1" class="modal-close fa fa-3x fa-times" aria-hidden="true"></h1>
         <img src="./assets/girl-no-hand.png" id="modal-girl-image" class="modal-girl-image">
         <div class="modal-content">
+            <div class="modal-space-stars modal-space"></div>
+            <div class="modal-space-twinkling modal-space"></div>
+            <div class="modal-comet modal-comet-1"></div>
+            <div class="modal-comet modal-comet-2"></div>
+            <div class="modal-comet modal-comet-3"></div>
+            <div class="modal-comet modal-comet-4"></div>
             <div id="modal-unit-gallery" class="modal-unit-gallery">
                 <div id="modal-gallery-left" class="modal-unit-gallery-left"></div>
                 <div id="modal-gallery-right" class="modal-unit-gallery-right"></div>
             </div>
         </div>
-        <img id="modal-handle" class="modal-handle" src="./assets/girl-hand.png"/>
+        <img id="modal-handle" class="modal-handle" src="./assets/girl-hand.png" />
     </div>
     <!--
     <svg>
@@ -41,7 +47,7 @@
         </defs>
     </svg>
     -->
-    
+
     <div class="light" id="light"></div>
 
     <div id="splash-svg" class="splash-svg">
