--- a/rectangle.html
+++ b/rectangle.html
@@ -34,6 +34,9 @@
                 <div id="modal-gallery-left" class="modal-unit-gallery-left"></div>
                 <div id="modal-gallery-right" class="modal-unit-gallery-right"></div>
             </div>
+            <canvas id="modal-unit-wibbly" class="modal-unit-wibbly">
+            
+            </canvas>
         </div>
         <img id="modal-handle" class="modal-handle" src="./assets/girl-hand.png" />
     </div>
