--- a/rectangle.html
+++ b/rectangle.html
@@ -47,7 +47,7 @@
             </div>
         </div>
         <div class="modal-nav">
-            <h1 id="modal-nav-title" class="modal-nav-title">AWGE</h1>
+            <h1 id="modal-nav-title" class="modal-nav-title">...</h1>
             <hr />
             <h2 class="modal-nav-button" id="modal-gallery">Gallery</h2>
             <h2 class="modal-nav-button" id="modal-link">Link</h2>
@@ -72,6 +72,7 @@
             <img class="hand-image-help" src="./assets/hand-help.png">
         </div>
         <div id="rect-menu-container" class="rect-menu-container">
+            <h1 id="rect-previous" class="rect-previous">Previous</h1>
             <div id="menu-main" class="rect-menu menu-main">
                 <h1 id="menu-main-title" class="menu-main-title">Alex Shortt</h1>
             </div>
