finished carousel with content

--- a/rectangle.html
+++ b/rectangle.html
@@ -103,12 +103,82 @@
             </div>
             <div id="menu-about" class="rect-menu menu-about">
                 <div class="stars"></div>
+                <div id="about-carousel" class="menu-about-carousel">
+                    <div class="menu-about-carousel-page">
+                        <div class="about-portrait"></div>
+                        <div class="about-desc">
+                            <h2 class="about-title">This is me.</h2>
+                        </div>
+                    </div>
+                    <div class="menu-about-carousel-page">
+                        <div class="about-desc">
+                            <h3 class="about-desc-text">Alex Shortt</h3>
+                            <hr />
+                            <h3 class="about-desc-text">17 years old</h3>
+                            <hr />
+                            <h3 class="about-desc-text">Senior at Bellarmine College Prep</h3>
+                            <hr />
+                            <h3 class="about-desc-text">Bay Area</h3>
+                        </div>
+                    </div>
+                    <div class="menu-about-carousel-page">
+                        <div class="about-working"></div>
+                        <div class="about-desc">
+                            <h3 class="about-desc-text">I work hard.</h3>
+                        </div>
+                    </div>
+                    <div class="menu-about-carousel-page">
+                        <div class="about-desc">
+                            <h2 class="about-title">I know all this:</h2>
+                        </div>
+                        <div class="about-desc">
+                            <h3 class="about-list">HTML/CSS</h3>
+                            <h3 class="about-list">JS/jQuery</h3>
+                            <h3 class="about-list">SASS/SCSS/LESS</h3>
+                            <h3 class="about-list">React</h3>
+                            <h3 class="about-list">Stripe</h3>
+                            <h3 class="about-list">Shopify</h3>
+                            <h3 class="about-list">Google Analytics</h3>
+                            <h3 class="about-list">Git</h3>
+                            <h3 class="about-list">Node.js</h3>
+                            <h3 class="about-list">Java</h3>
+                        </div>
+                    </div>
+                    <div class="menu-about-carousel-page">
+                        <div class="about-desc">
+                            <h2 class="about-title">And a bit of this:</h2>
+                        </div>
+                        <div class="about-desc">
+                            <h3 class="about-list">Android Dev</h3>
+                            <h3 class="about-list">C#</h3>
+                            <h3 class="about-list">Photoshop</h3>
+                            <h3 class="about-list">Illustrator</h3>
+                            <h3 class="about-list">FL Studio</h3>
+                            <h3 class="about-list">Serato DJ</h3>
+                        </div>
+                    </div>
+                    <div class="menu-about-carousel-page">
+                        <div class="about-mix"></div>
+                        <div class="about-desc">
+                            <h2 class="about-title">I mix music.</h2>
+                        </div>
+                    </div>
+                    <div class="menu-about-carousel-page">
+                        <div class="about-desc">
+                            <h2 class="about-title">In Short(t).</h2>
+                            <hr />
+                        </div>
+                        <div class="about-desc">
+                            <h3 class="about-list">I program.</h3>
+                            <h3 class="about-list">I design.</h3>
+                            <h3 class="about-list">I mix music.</h3>
+                            <h3 class="about-list">I can make powerpoints in space.</h3>
+                        </div>
+                    </div>
+                </div>
                 <div class="menu-about-arrow">
                     <i id="about-page-up" class="menu-about-arrow-button fa fa-arrow-circle-up" aria-hidden="true"></i>
                     <i id="about-page-down" class="menu-about-arrow-button fa fa-arrow-circle-down" aria-hidden="true"></i>
-                </div>
-                <div id="about-physics" class="menu-about-physics">
-
                 </div>
             </div>
             <div id="menu-contact" class="rect-menu menu-contact">
