--- a/rectangle.html
+++ b/rectangle.html
@@ -14,6 +14,18 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/svg.js/2.6.3/svg.min.js"></script>
 
     <script src="scripts/rectangle.js" type="text/javascript"></script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-97408879-4"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+        gtag('config', 'UA-97408879-4');
+    </script>
 </head>
 
 <body>
@@ -36,21 +48,21 @@
                 <div class="modal-unit-portal-layer"></div>
                 <div class="modal-unit-portal-layer"></div>
                 <div class="modal-unit-portal-layer"></div>
-                <h1 id="modal-unit-portal-text" class="modal-unit-portal-text">VISIT</h1>
+                <h1 id="modal-unit-portal-text" class="modal-unit-portal-text">...</h1>
             </div>
             <div id="modal-unit-gallery" class="modal-unit-gallery">
                 <div id="modal-gallery-left" class="modal-unit-gallery-left"></div>
                 <div id="modal-gallery-right" class="modal-unit-gallery-right"></div>
             </div>
             <div id="modal-unit-about" class="modal-unit-about">
-                <h3 id="modal-unit-about-text" class="modal-unit-about-text">Hello</h3>
+                <h3 id="modal-unit-about-text" class="modal-unit-about-text">...</h3>
             </div>
         </div>
         <div class="modal-nav">
             <h1 id="modal-nav-title" class="modal-nav-title">...</h1>
             <hr />
-            <h2 class="modal-nav-button" id="modal-about">About</h2>
             <h2 class="modal-nav-button" id="modal-link">Link</h2>
+            <h2 class="modal-nav-button" id="modal-about">About</h2>
             <h2 class="modal-nav-button" id="modal-gallery">Gallery</h2>
         </div>
         <img id="modal-handle" class="modal-handle" src="./assets/girl-hand.png" />
@@ -206,12 +218,11 @@
     </div>
 
     <script>
-        $(document).ready(function() {
+        $(document).ready(function () {
             initPage();
             initHash();
             initParallax();
         });
-
     </script>
 </body>
 
