--- a/rectangle.html
+++ b/rectangle.html
@@ -12,7 +12,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.15.0/TweenMax.min.js" type="text/javascript"></script>
     <script src="scripts/perfect-scrollbar.jquery.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/svg.js/2.6.3/svg.min.js"></script>
-
+    <link rel="icon" type="image/png" href="assets/favicon.png" sizes="32x32">
+    
     <script src="scripts/rectangle.js" type="text/javascript"></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
